@@ -12,7 +12,7 @@ dnl
 AC_INIT(auth_mysql.c)
 AC_CONFIG_AUX_DIR(config)
 AM_CONFIG_HEADER(configuration.h)
-AM_INIT_AUTOMAKE(tpop3d, "1.3.5pre1")
+AM_INIT_AUTOMAKE(tpop3d, "1.3.5pre2")
 
 AC_DEFINE_UNQUOTED(TPOP3D_VERSION, "$VERSION", [The tpop3d version number])
 
@@ -299,7 +299,8 @@ fi
 dnl Checks for libraries.
 
 AC_SEARCH_LIBS(socket, socket)
-AC_SEARCH_LIBS(gethostbyname, nsl socket)
+AC_CHECK_FUNC(gethostbyname, ,
+	[AC_CHECK_LIB(nsl, gethostbyname)] )
 
 if test x"$enable_efence" = x"yes"
 then
@@ -314,7 +315,7 @@ fi
 
 if test x"$enable_pam" = x"yes"
 then
-    AC_CHECK_LIB(dl, main, [], [] )
+    AC_CHECK_LIB(dl, main )
     AC_CHECK_LIB(pam, pam_start, [], AC_MSG_ERROR([[pam authentication enabled, but can't find libpam]]) )
 fi
 
