@@ -33,3 +33,9 @@ auth-mysql-enable:      yes
 auth-mysql-database:    vmail
 auth-mysql-username:    vmail
 auth-mysql-password:    moocow
+#auth-mysql-user-query: select '/tmp/test-mailspool', '{plaintext}moocow', 'chris', 'mailspool'
+auth-mysql-pass-query:                              \
+    select '/tmp/test-mailspool',                   \
+           concat('{plaintext}', '$(local_part)'),  \
+           'chris',                                 \
+           'mailspool'
